[tool.poetry]
name = "calc"
version = "0.1.0"
description = ""
authors = ["Ihor Horobets <ihor@horobets.me>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.58.1"
uvicorn = "^0.11.5"
cachetools = "^4.1.1"
aiocache = "^0.11.1"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
requests-mock = "^1.8.0"
pytest = "^5.4.3"
pylint = "^2.5.3"
pytest-asyncio = "^0.14.0"
requests_mock = "^1.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
